[package]
name = "apiel-cli"
version = "0.1.0"
authors = ["Mark Firman <markfirmanwork@gmail.com>"]
edition = "2024"
homepage = "https://github.com/NamesMark/apiel"
repository = "https://github.com/NamesMark/apiel/apiel-cli"
license = "MIT"

[[bin]]
doc = false
name = "apiel-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apiel = { path = "../apiel" }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[features]
