[package]
name = "apiel-cli"
version = "0.1.0"
authors = ["Mark Firman <markfirmanwork@gmail.com>"]
edition = "2024"
homepage = "https://github.com/NamesMark/apiel"
repository = "https://github.com/NamesMark/apiel/apiel-cli"
license = "MIT"

[[bin]]
doc = false
name = "apiel-cli"

[dependencies]
apiel = { path = "../apiel" }
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"

[features]
