[package]
name = "apiel-cli"
version = "0.2.0"
authors = ["Mark Firman <markfirmanwork@gmail.com>"]
edition = "2024"
description = "Interactive REPL for apiel, a subset of the APL programming language implemented in Rust."
keywords = ["apl", "array", "repl", "interpreter"]
categories = ["command-line-utilities", "mathematics"]
homepage = "https://github.com/NamesMark/apiel"
repository = "https://github.com/NamesMark/apiel/apiel-cli"
license = "MIT"

[[bin]]
doc = false
name = "apiel-cli"

[dependencies]
apiel = { version = "0.2.0", path = "../apiel" }
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"

[features]
