[package]
name = "apiel"
version = "0.2.0"
authors = ["Mark Firman <markfirmanwork@gmail.com>"]
edition = "2024"
homepage = "https://github.com/NamesMark/apiel"
repository = "https://github.com/NamesMark/apiel/apiel"
license = "MIT"
build = "build.rs"

[build-dependencies]
cfgrammar.workspace = true
lrlex.workspace = true
lrpar.workspace = true

[dependencies]
cfgrammar.workspace = true
conv.workspace = true
eyre.workspace = true
lrlex.workspace = true
lrpar.workspace = true
num-traits.workspace = true
rand.workspace = true
tracing.workspace = true

[features]
