[package]
name = "apiel"
version = "0.2.0"
authors = ["Mark Firman <markfirmanwork@gmail.com>"]
edition = "2024"
description = "A subset of the APL programming language implemented in Rust. Exports a macro for evaluating APL expressions from Rust code, providing a way to solve some problems in a very concise manner."
keywords = ["apl", "array", "interpreter", "language", "math"]
categories = ["mathematics", "compilers"]
homepage = "https://github.com/NamesMark/apiel"
repository = "https://github.com/NamesMark/apiel/tree/main/apiel"
license = "MIT"
build = "build.rs"

[build-dependencies]
cfgrammar.workspace = true
lrlex.workspace = true
lrpar.workspace = true

[dependencies]
cfgrammar.workspace = true
conv.workspace = true
eyre.workspace = true
lrlex.workspace = true
lrpar.workspace = true
num-traits.workspace = true
rand.workspace = true
tracing.workspace = true

[features]
